# MTL

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  MTL.sln  bootstrap.bat  vcpkg-configuration.json  vcpkg.json
EdgeBed/: EdgeBed.cpp  EdgeBed.rc  EdgeBed.vcxproj  Resource.h
EdgeWin32/: EdgeWin32.cpp  EdgeWin32.h  EdgeWin32.vcxproj  dllmain.cpp  framework.h
MTL/: CMakeLists.txt  MTL.vcxproj  async.h  tags  test.xml  test_h.h  test_i.c  test_p.c
MTL/include/MTL/: aut.h  box.h  bstr.h  comem.h  disp.h  fwd.h  impl.h  inproc.h  iso.h  localserver.h  marshall.h  module.h  mtl.h  obj.h  path.h  punk.h  script.h  sdk.h  sf_array.h  uni.h  variant.h
MTL/include/MTL/disp/: aut.h  bstr.h  disp.h  sf_array.h  typeinfo.h  variant.h
MTL/include/MTL/edge/: chrome.h
MTL/include/MTL/ole/: async.h  control.h  cp.cpp  cp.h  dataobj.h  explorer.h  host.h  img.h  shell.h
MTL/include/MTL/persist/: expat.h  json.h  persist.h  stgm.h  stream.h  xml.h
MTL/include/MTL/scintilla/: sci.h
MTL/include/MTL/script/: chakra.h  script.h
MTL/include/MTL/util/: base64.h  event.h  path.h  rgb.h  str.h
MTL/include/MTL/win/: app.h  clipboard.h  codlg.h  ctrl.h  dlg.h  enc.h  gdi.h  layout.h  mdi.h  rib.h  taskbar.h  taskdlg.h  wc.h  wind.h  wnd.h
MTL/include/MTL/win32/: arg.h  box.h  io.h  mem.h  module.h  monitor.h  pipe.h  uni.h
MTL/msbuild/: mtl.props  package.xml
MTL/msbuild/root/: mtl.xml  package.props
MTL/msbuild/root/res/: setup.wxs
MTL/tests/: CMakeLists.txt  collection.cpp  io.cpp  json.cpp  mtl.manifest  shell.cpp  stream.cpp  test.cpp  test.idl  test.manifest  test.rc  variant.cpp
examples/Editor/: Controller.h  Editor.aps  Editor.cpp  Editor.h  Editor.idl  Editor.manifest  Editor.manifest.old  Editor.rc  Editor.vcxproj  Editor_h.h  Editor_i.c  Editor_p.c  Model.cpp  Model.h  Resource.h  Service.h  View.h  com.h  ctx-unreg.reg  ctx.reg  deploy.wxs  dispid.bat  dispids.h  dlldata.c  fragment.wxs  id.cpp  id.js  ids-cpp  ids.cpp  make_enum.sh  make_ids.sh  mtl.xml  mvc.cpp  mvc.h  proto.reg  rebar.xml  service.cpp  tags  test.js  tmp.txt  (+1 more)
examples/Editor/deploy/: bar.xml
examples/Editor/img/: make_png.sh
examples/Editor/res/: MondoNoLicense.wxs  features.xml  setup.wxs
examples/HexEdit/: HexEdit.aps  HexEdit.cpp  HexEdit.h  HexEdit.manifest  HexEdit.rc  HexEdit.vcxproj  resource.h
examples/helloRibbon/: Resource.h  framework.h  helloRibbon.cpp  helloRibbon.rc  helloRibbon.vcxproj  helloRiboon.manifest  id.cpp  id.js  ribbon.aps  ribbon.bml  ribbon.cpp  ribbon.h  ribbon.js  ribbon.rc  ribbon.xml
examples/helloRibbon/img/: New Text Document.txt
examples/helloRibbon/res/: setup.wxs
examples/helloworld/helloworld/: Resource.h  framework.h  helloworld.aps  helloworld.cpp  helloworld.manifest  helloworld.rc  helloworld.vcxproj  id.cpp  id.js  mtl.xml
examples/mtlExplorer/: mtlExplorer.aps  mtlExplorer.h  mtlExplorer.manifest  mtlExplorer.rc  mtlExplorer.vcxproj  resource.h  ´mtlExplorer.cpp
examples/multipad/: multipad.aps  multipad.cpp  multipad.h  multipad.manifest  multipad.rc  multipad.vcxproj  resource.h  targetver.h
mtlgen/: CMakeLists.txt  Parser.h  disp.h  dllmodule.h  init.h  manifest.h  mtlgen.cpp  mtlgen.h  mtlgen.vcxproj  packer.h  reg.h  selfreg.h  util.cpp  util.h  wix.h
mtlgen/msbuild/: mtl.props  mtl.xml  package.xml
mtlgen/msbuild/root/: mtl.xml  package.props
mtlgen/msbuild/root/res/: en-us.wxl
ports/mtl/: CONTROL
vcpkg/ports/metacpp/: vcpkg.json
vcpkg/ports/mtl/: CONTROL  portfile.cmake
vcpkg/versions/: baseline.json
vcpkg/versions/m-/: metacpp.json  mtl.json
